--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@supabase/ssr": "latest",
-        "@supabase/supabase-js": "^2.39.0",
+        "@auth/supabase-adapter": "^1.7.4",
+        "@supabase/ssr": "^0.5.2",
+        "@supabase/supabase-js": "^2.47.16",
         "@types/node": "^20.0.0",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
         "next": "^14.1.0",
-        "next-auth": "^4.24.0",
+        "next-auth": "^4.24.11",
         "openai": "^4.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "supabase": "^2.6.8",
         "typescript": "^5.3.0"
     },
     "devDependencies": {
