--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "openai": "^4.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hot-toast": "^2.5.1",
         "supabase": "^2.6.8",
         "typescript": "^5.3.0"
     },
