--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "dependencies": {
         "@supabase/ssr": "^0.5.2",
         "@supabase/supabase-js": "^2.47.16",
-        "@types/node": "^20.0.0",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
         "date-fns": "^4.1.0",
         "next": "^14.1.0",
-        "openai": "^4.0.0",
+        "openai": "^4.82.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hot-toast": "^2.5.1",
-        "supabase": "^2.6.8",
         "typescript": "^5.3.0"
     },
     "devDependencies": {
+        "@types/node": "^20.17.16",
+        "@typescript-eslint/eslint-plugin": "^8.23.0",
+        "@typescript-eslint/parser": "^8.23.0",
         "eslint": "^8.55.0",
         "eslint-config-next": "^14.1.0"
     }
