--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
         "date-fns": "^4.1.0",
+        "framer-motion": "^12.0.11",
         "next": "^14.1.0",
         "openai": "^4.82.0",
         "react": "18.2.0",
